<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#423752"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_horizontal_ntb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <devlight.io.library.ntb.NavigationTabBar
        android:id="@+id/ntb_horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:ntb_active_color="#FFF"
        app:ntb_bg_color="@color/colorBackground"
        app:ntb_icon_size_fraction="0.5"
        app:ntb_inactive_color="#FFF"
        app:ntb_scaled="true"
        app:ntb_swiped="true"
        app:ntb_tinted="true"
        app:ntb_title_mode="all"
        app:ntb_titled="true" />

</LinearLayout>
