...
    <string name="app_name">Animation Recognition</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter password</string>
    <string name="success_message">Registration Successful</string>
...
